# Ventus

./: .gitattributes  .gitignore  LICENSE  README.md  authors.json  cohorts.json  commit_messages.txt  dirs.json  domains.json  exts.json  git_repo_stats.md  server.sh  survival.json
Ventus-iOS/: .gitignore  Info.plist  Ventus-iOS-Bridging-Header.h
Ventus-macos/: Info.plist  Ventus-macos-Bridging-Header.h
actix-web/: Cargo.toml  artifact  main.rs
alt-cli/: Cargo.toml
android-bin/: cleanup.sh
async-ftp-server/: .gitignore  Cargo.toml
async_cli/: .gitignore  Cargo.toml
backend/: .gitignore  Cargo.toml
cli/: .gitignore  f.py  ftp_tester.py  g_test.py  test_runner.py  test_upload.txt
client-server-notify/: .gitignore  client.py  file_sync.proto  file_sync_pb2.py  file_sync_pb2_grpc.py  server.py  test_client.py  test_integration.py  test_server.py
daemon/: .gitignore  README.md  artifact  main.py  requirements.txt
desktop-app/: .gitignore  artifact  cleanup.sh  file_explorer.py  handlers.py  main.py  readme.md  requirements.txt  ui_debug.py  ui_main_window.py  utils.py
ffi/: Cargo.toml  build.rs  uniffi.toml
ffi/src/: codec.rs  ffi.udl  lib.rs
ftp_client/: Cargo.toml  build.rs  uniffi.toml
ftp_client/.cargo/: config.toml
ftp_client/src/: codec.rs  ftp_client.swift  ftp_client.udl  lib.rs
mobile-app/: .gitignore  app.config.ts  app.json  babel.config.js  metro.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
qrcode-helper/: Cargo.toml
stats/: authors.json  cohorts.json  dirs.json  domains.json  exts.json  (+3 more)
(+151 files in other folders)
